hw-04 назва папки

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 					<li class="item">
 						<a href="mailto:info@devstudio.com" class="link">
 							<svg class="icon-mail">
-								<use href="./images/symbol.svg#icon-mail"></use>
+								<use href="./images/icons.svg#icon-mail"></use>
 							</svg>
 							info@devstudio.com
 						</a>
@@ -47,7 +47,7 @@
 					<li class="item">
 						<a href="tel:+380961111111" class="link">
 							<svg class="icon-phone">
-								<use href="./images/symbol.svg#icon-phone"></use>
+								<use href="./images/icons.svg#icon-phone"></use>
 							</svg>
 							+38 096 111 11 11
 						</a>
@@ -191,28 +191,28 @@
 						<li class="icon-mesenger-button">
 							<a class="icons" href="instagram">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-instagram"></use>
+									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="twiter">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-twitter"></use>
+									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="facebook">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-facebook"></use>
+									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="linkedin">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-linkedin"></use>
+									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
 							</a>
 						</li>
