--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li class="item">
 						<a href="mailto:info@devstudio.com" class="link">
 							<svg class="icon-mail">
-								<use href="./images/symbol.svg#icon-mail"></use>
+								<use href="./images/icons.svg#icon-mail"></use>
 							</svg>
 							info@devstudio.com
 						</a>
@@ -44,7 +44,7 @@
 					<li class="item">
 						<a href="tel:+380961111111" class="link">
 							<svg class="icon-phone">
-								<use href="./images/symbol.svg#icon-phone"></use>
+								<use href="./images/icons.svg#icon-phone"></use>
 							</svg>
 							+38 096 111 11 11
 						</a>
@@ -124,28 +124,28 @@
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="twiter">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="facebook">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="linkedin">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -163,28 +163,28 @@
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="twiter">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="facebook">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="linkedin">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -202,28 +202,28 @@
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="twiter">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="facebook">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="linkedin">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -241,28 +241,28 @@
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="twiter">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="facebook">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="linkedin">
 											<svg class="footer-icon" width="20" height="20">
-												<use href="./images/symbol.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -284,28 +284,28 @@
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company1"></use>
+								<use href="./images/icons.svg#icon-company1"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company2"></use>
+								<use href="./images/icons.svg#icon-company2"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company3"></use>
+								<use href="./images/icons.svg#icon-company3"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company4"></use>
+								<use href="./images/icons.svg#icon-company4"></use>
 							</svg>
 						</a>
 					</li>
@@ -313,14 +313,14 @@
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company5"></use>
+								<use href="./images/icons.svg#icon-company5"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="section-item-clients">
 						<a class="icons-clients" href="instagram">
 							<svg class="client-list">
-								<use href="./images/symbol.svg#icon-company6"></use>
+								<use href="./images/icons.svg#icon-company6"></use>
 							</svg>
 						</a>
 					</li>
@@ -349,28 +349,28 @@
 						<li class="icon-mesenger-button">
 							<a class="icons" href="instagram">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-instagram"></use>
+									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="twiter">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-twitter"></use>
+									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="facebook">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-facebook"></use>
+									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-mesenger-button">
 							<a class="icons" href="linkedin">
 								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/symbol.svg#icon-linkedin"></use>
+									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
 							</a>
 						</li>
